--- a/package.json
+++ b/package.json
@@ -40,10 +40,15 @@
     "react-hot-loader": "^1.3.0",
     "webpack": "^1.12.2",
     "webpack-dev-middleware": "^1.6.1",
-    "webpack-hot-middleware": "^2.10.0"
+    "webpack-hot-middleware": "^2.10.0",
+    "redux-devtools": "~3.3.1",
+    "babel-plugin-transform-decorators-legacy": "~1.3.4"
   },
   "dependencies": {
+    "lodash": "^3.10.1",
     "react": "^0.14.6",
-    "react-dom": "^0.14.6"
+    "react-dom": "^0.14.6",
+    "react-redux": "^4.4.6",
+    "redux": "^3.5.0"
   }
 }
