--- a/package.json
+++ b/package.json
@@ -34,6 +34,11 @@
     "babel-preset-es2015": "^6.0.15",
     "babel-preset-react": "^6.0.15",
     "babel-preset-stage-0": "^6.0.15",
+    "css-loader": "^0.15.6",
+    "cssnext-loader": "^1.0.1",
+    "extract-text-webpack-plugin": "^0.8.2",
+    "html-webpack-plugin": "^1.6.1",
+    "style-loader": "^0.12.3",
     "eslint": "^1.10.3",
     "eslint-plugin-react": "^3.6.2",
     "express": "^4.13.4",
@@ -45,6 +50,7 @@
     "babel-plugin-transform-decorators-legacy": "~1.3.4"
   },
   "dependencies": {
+    "classnames": "^2.1.3",
     "lodash": "^3.10.1",
     "react": "^0.14.6",
     "react-dom": "^0.14.6",
